Changes to controllers and combined models
