# src/models/answer.js
@@ -1,19 +1,0 @@
-// Model for Question
-const mongoose = require("mongoose");
-
-//Schema for questions
-const ASchema = new mongoose.Schema(
-	{
-		answer: String,
-		author: String,
-		time: {
-			type: Date,
-			default: Date.now
-		}
-	},
-	{
-		collection: "Answers"
-	}
-);
-
-module.exports = mongoose.model("answer", ASchema);
