# src/routes/questions/index.js
@@ -3,9 +3,12 @@ const router = express.Router();
 
 // Controllers for different routes:
 const QController = require("../../controllers/questions/QController");
+const AController = require("../../controllers/answers/AController");
 
 //Routes for questions -collection:
 router.get("/:id", QController.getQuestion);
+router.post("/:id/answers", AController.addAnswer);
+router.get("/:id/answers", AController.getAnswer);
 router.get("/", QController.getQuestions);
 router.post("/", QController.addQuestion);
 
